--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -17,10 +20,13 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.23.0"
-
+      
+      - name: Install goose
+        run: (go install github.com/pressly/goose/v3/cmd/goose@latest)
+        
       - name: Build
         run: (./scripts/buildprod.sh)
-
+      
       - name: Auth GCP
         uses: 'google-github-actions/auth@v2'
         with:
@@ -28,10 +34,13 @@ jobs:
       
       - name: Setup GCP SDK
         uses: 'google-github-actions/setup-gcloud@v2'
-
+      
       - name: 'Push to GCPs Atrifact Registry'
         run: (gcloud builds submit --tag us-central1-docker.pkg.dev/notely-454711/notely-ar-repo/notely:latest)
-
+    
+      - name: "Deploy db updates"
+        run: (./scripts/migrateup.sh)
+            
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-454711/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-454711 --max-instances=4
 
